# internal/types/featured_sections/delete_featured_section_parameters.go
@@ -1,0 +1,90 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package featured_sections
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// NewDeleteFeaturedSectionParams creates a new DeleteFeaturedSectionParams object
+// no default values defined in spec.
+func NewDeleteFeaturedSectionParams() DeleteFeaturedSectionParams {
+
+	return DeleteFeaturedSectionParams{}
+}
+
+// DeleteFeaturedSectionParams contains all the bound params for the delete featured section operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters DeleteFeaturedSection
+type DeleteFeaturedSectionParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*ID of the featured section
+	  Required: true
+	  In: path
+	*/
+	ID int64 `param:"id"`
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewDeleteFeaturedSectionParams() beforehand.
+func (o *DeleteFeaturedSectionParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	rID, rhkID, _ := route.Params.GetOK("id")
+	if err := o.bindID(rID, rhkID, route.Formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (o *DeleteFeaturedSectionParams) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	// id
+	// Required: true
+	// Parameter is provided by construction from the route
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// bindID binds and validates parameter ID from path.
+func (o *DeleteFeaturedSectionParams) bindID(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: true
+	// Parameter is provided by construction from the route
+
+	value, err := swag.ConvertInt64(raw)
+	if err != nil {
+		return errors.InvalidType("id", "path", "int64", raw)
+	}
+	o.ID = value
+
+	return nil
+}
