# internal/types/news/get_all_news_articles_parameters.go
@@ -1,0 +1,55 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package news
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+)
+
+// NewGetAllNewsArticlesParams creates a new GetAllNewsArticlesParams object
+// no default values defined in spec.
+func NewGetAllNewsArticlesParams() GetAllNewsArticlesParams {
+
+	return GetAllNewsArticlesParams{}
+}
+
+// GetAllNewsArticlesParams contains all the bound params for the get all news articles operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters GetAllNewsArticles
+type GetAllNewsArticlesParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewGetAllNewsArticlesParams() beforehand.
+func (o *GetAllNewsArticlesParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (o *GetAllNewsArticlesParams) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
