# internal/types/news_categories/get_all_categories_with_news_parameters.go
@@ -1,0 +1,55 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package news_categories
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+)
+
+// NewGetAllCategoriesWithNewsParams creates a new GetAllCategoriesWithNewsParams object
+// no default values defined in spec.
+func NewGetAllCategoriesWithNewsParams() GetAllCategoriesWithNewsParams {
+
+	return GetAllCategoriesWithNewsParams{}
+}
+
+// GetAllCategoriesWithNewsParams contains all the bound params for the get all categories with news operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters GetAllCategoriesWithNews
+type GetAllCategoriesWithNewsParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewGetAllCategoriesWithNewsParams() beforehand.
+func (o *GetAllCategoriesWithNewsParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (o *GetAllCategoriesWithNewsParams) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
