# internal/types/news_categories/get_category_with_news_parameters.go
@@ -1,0 +1,90 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package news_categories
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// NewGetCategoryWithNewsParams creates a new GetCategoryWithNewsParams object
+// no default values defined in spec.
+func NewGetCategoryWithNewsParams() GetCategoryWithNewsParams {
+
+	return GetCategoryWithNewsParams{}
+}
+
+// GetCategoryWithNewsParams contains all the bound params for the get category with news operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters GetCategoryWithNews
+type GetCategoryWithNewsParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*ID of the news category
+	  Required: true
+	  In: path
+	*/
+	ID int64 `param:"id"`
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewGetCategoryWithNewsParams() beforehand.
+func (o *GetCategoryWithNewsParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	rID, rhkID, _ := route.Params.GetOK("id")
+	if err := o.bindID(rID, rhkID, route.Formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (o *GetCategoryWithNewsParams) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	// id
+	// Required: true
+	// Parameter is provided by construction from the route
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// bindID binds and validates parameter ID from path.
+func (o *GetCategoryWithNewsParams) bindID(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: true
+	// Parameter is provided by construction from the route
+
+	value, err := swag.ConvertInt64(raw)
+	if err != nil {
+		return errors.InvalidType("id", "path", "int64", raw)
+	}
+	o.ID = value
+
+	return nil
+}
