# internal/types/spec_handlers.go
@@ -36,10 +36,20 @@ func (o *SwaggerSpec) initHandlerCache() {
 	o.Handlers["HEAD"] = make(map[string]bool)
 	o.Handlers["PATCH"] = make(map[string]bool)
 
+	o.Handlers["DELETE"]["/api/v1/featured_sections/{id}"] = true
+	o.Handlers["DELETE"]["/api/v1/news/{id}"] = true
+	o.Handlers["DELETE"]["/api/v1/news/categories/{id}"] = true
+	o.Handlers["GET"]["/api/v1/news/categories"] = true
+	o.Handlers["GET"]["/api/v1/featured_sections"] = true
+	o.Handlers["GET"]["/api/v1/news"] = true
+	o.Handlers["GET"]["/api/v1/news/categories/{id}/news"] = true
+	o.Handlers["GET"]["/api/v1/featured_sections/{id}/articles"] = true
 	o.Handlers["GET"]["/api/v1/auth/userinfo"] = true
 	o.Handlers["POST"]["/api/v1/stream"] = true
 	o.Handlers["POST"]["/api/v1/auth/login"] = true
+	o.Handlers["POST"]["/api/v1/stream/play"] = true
 	o.Handlers["POST"]["/api/v1/stream/publish"] = true
 	o.Handlers["POST"]["/api/v1/auth/register"] = true
+	o.Handlers["POST"]["/api/v1/stream/stop"] = true
 	o.Handlers["POST"]["/api/v1/stream/unpublish"] = true
 }
