# internal/types/stream/post_stop_route_parameters.go
@@ -1,0 +1,87 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package stream
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+
+	"github.com/JehadAbdulwafi/rustion/tmp/testdata/types"
+)
+
+// NewPostStopRouteParams creates a new PostStopRouteParams object
+// no default values defined in spec.
+func NewPostStopRouteParams() PostStopRouteParams {
+
+	return PostStopRouteParams{}
+}
+
+// PostStopRouteParams contains all the bound params for the post stop route operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters PostStopRoute
+type PostStopRouteParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*
+	  In: body
+	*/
+	Payload *types.StreamEvent
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewPostStopRouteParams() beforehand.
+func (o *PostStopRouteParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	if runtime.HasBody(r) {
+		defer r.Body.Close()
+		var body types.StreamEvent
+		if err := route.Consumer.Consume(r.Body, &body); err != nil {
+			res = append(res, errors.NewParseError("payload", "body", "", err))
+		} else {
+			// validate body object
+			if err := body.Validate(route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			if len(res) == 0 {
+				o.Payload = &body
+			}
+		}
+	}
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (o *PostStopRouteParams) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	// Payload
+	// Required: false
+
+	// body is validated in endpoint
+	//if err := o.Payload.Validate(formats); err != nil {
+	//  res = append(res, err)
+	//}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
